--- a/frontend/src/core/locales/resources/vn.json
+++ b/frontend/src/core/locales/resources/vn.json
@@ -235,6 +235,37 @@
     "form_heading": " Wisers' <br className=\"block md:hidden\"/> Greatest Show 2025",
     "form_description_1": "Chào mừng các WISers đến với",
     "form_description_2": "Hãy đăng ký dự thi theo thông tin bên dưới.",
+
+    "count_down_date": "Còn <span className=\"text-[14rem] md:text-[40rem] font-semibold\">{{day}}</span> ngày <span className=\"text-[14rem] md:text-[40rem] font-semibold\">{{hours}}</span> giờ <span className=\"text-[14rem] md:text-[40rem] font-semibold\">{{minutes}}</span> phút <span className=\"text-[14rem] md:text-[40rem] font-semibold\">{{seconds}}</span> giây",
+    "teaser_heading_1": "Happy",
+    "teaser_heading_2": "Run",
+    "teaser_description": "CHỜ ĐÓN TEASER SỰ KIỆN HAPPY RUN 2025 <br/> VÀO CHỦ NHẬT, NGÀY 23/03/2025",
+    "target_heading": "Đối tượng dự thi",
+    "target_group_title_1": "Học sinh",
+    "target_group_desc_1": "Học sinh từ khối lớp 1-12 đang học tại trường Wellspring Saigon (năm học 2025-2026)",
+    "target_group_title_2": "Cựu học sinh",
+    "target_group_desc_2": "Cựu học sinh đã từng học tại Wellspring Saigon",
+    "target_group_title_3": "GV-NV",
+    "target_group_desc_3": "Giáo viên, Cán bộ Công nhân viên đang công tác tại trường Wellspring Saigon",
+    "target_group_title_4": "Phụ huynh",
+    "target_group_desc_4": "Phụ huynh Học sinh có con đang học tại trường Wellspring Saigon (năm học 2025-2026)",
+    "target_text_1": "Các thí sinh được chia trong <b>3 BẢNG DỰ THI</b> phù hợp với đối tượng tham gia",
+    "category_heading": "Hình thức dự thi",
+    "category_item_1": "Ca hát",
+    "category_item_2": "Nhảy múa",
+    "category_item_3": "Biểu diễn nhạc cụ",
+    "category_item_4": "Tiết mục tài năng khác",
+    "awards_heading": "Giải thưởng",
+    "awards_value_title": "Tổng giá trị giải thưởng lên đến",
+    "award_item_1_value": "Trị giá <b className=\"text-[14rem] md:text-[28rem] font-[800]\">10.000.000 VND</b>",
+    "award_item_2_value": "Trị giá <b className=\"text-[14rem] md:text-[28rem] font-[800]\">7.000.000 VND</b>",
+    "award_item_3_value": "Trị giá <b className=\"text-[14rem] md:text-[28rem] font-[800]\">5.000.000 VND</b>",
+    "award_item_4_value": "Trị giá <b className=\"text-[14rem] md:text-[28rem] font-[800]\">3.000.000 VND</b>",
+    "award_item_5_value": "Trị giá <b className=\"text-[14rem] md:text-[28rem] font-[800]\">2.000.000 VND</b>",
+    "award_item_bonus": "Kỷ niệm chương và Huy chương",
+    "journey_section_heading": "Hành trình",
+    "contact_section_heading": "Thông tin liên hệ",
+    "contact_email": "Email BTC: {{email}}",
     "form": {
       "section_info_heading": "Thông tin chung",
       "section_1_heading": "Đối tượng dự thi",
@@ -306,17 +337,10 @@
       "success_text_2": "Hẹn gặp lại bạn tại <b>VÒNG 1 - WITHIN ME</b> diễn ra vào <b>29/11/2025.</b>",
       "success_text_3": "Hãy sẵn sàng thể hiện tài năng và đam mê của bản thân tại <br/> WISers' Greatest show 2025!"
     },
-    "order_title": "Chi Tiết <span className=\"text-hr-honey\">Đơn Hàng</span>",
     "buttons": {
-      "add_person": "Thêm người +",
       "register_now": "Đăng ký ngay",
-      "confirm_payment": "Xác nhận thanh toán",
       "go_back": "Quay lại",
-      "download_qr": "Tải mã QR",
       "finish": "Hoàn thành",
-      "agree": "Tôi đồng ý và Tiếp Tục",
-      "not_agree": "Tôi không đồng ý",
-      "search_now": "Tra cứu ngay",
       "view_more": "Xem thêm",
       "view_less": "Thu gọn",
       "view_order": "Xem đơn hàng",
@@ -324,38 +348,6 @@
       "entry_rules": "Thể lệ thi",
       "entry_results": "Kết quả thi",
       "go_home": "Trở về"
-    },
-    "ticket_sale_official_time": "Thời gian bán vé chính thức",
-    "count_down_heading": "CHÀO MỪNG CÁC WISers ĐẾN VỚI<br className=\"block md:hidden\"/> HAPPY RUN 2025 & <br/> KHỞI ĐỘNG HAPPY SUMMER 2025",
-    "count_down_date": "Còn <span className=\"text-[14rem] md:text-[40rem] font-semibold\">{{day}}</span> ngày <span className=\"text-[14rem] md:text-[40rem] font-semibold\">{{hours}}</span> giờ <span className=\"text-[14rem] md:text-[40rem] font-semibold\">{{minutes}}</span> phút <span className=\"text-[14rem] md:text-[40rem] font-semibold\">{{seconds}}</span> giây",
-    "teaser_heading_1": "Happy",
-    "teaser_heading_2": "Run",
-    "teaser_description": "CHỜ ĐÓN TEASER SỰ KIỆN HAPPY RUN 2025 <br/> VÀO CHỦ NHẬT, NGÀY 23/03/2025",
-    "target_heading": "Đối tượng dự thi",
-    "target_group_title_1": "Học sinh",
-    "target_group_desc_1": "Học sinh từ khối lớp 1-12 đang học tại trường Wellspring Saigon (năm học 2025-2026)",
-    "target_group_title_2": "Cựu học sinh",
-    "target_group_desc_2": "Cựu học sinh đã từng học tại Wellspring Saigon",
-    "target_group_title_3": "GV-NV",
-    "target_group_desc_3": "Giáo viên, Cán bộ Công nhân viên đang công tác tại trường Wellspring Saigon",
-    "target_group_title_4": "Phụ huynh",
-    "target_group_desc_4": "Phụ huynh Học sinh có con đang học tại trường Wellspring Saigon (năm học 2025-2026)",
-    "target_text_1": "Các thí sinh được chia trong <b>3 BẢNG DỰ THI</b> phù hợp với đối tượng tham gia",
-    "category_heading": "Hình thức dự thi",
-    "category_item_1": "Ca hát",
-    "category_item_2": "Nhảy múa",
-    "category_item_3": "Biểu diễn nhạc cụ",
-    "category_item_4": "Tiết mục tài năng khác",
-    "awards_heading": "Giải thưởng",
-    "awards_value_title": "Tổng giá trị giải thưởng lên đến",
-    "award_item_1_value": "Trị giá <b className=\"text-[14rem] md:text-[28rem] font-[800]\">10.000.000 VND</b>",
-    "award_item_2_value": "Trị giá <b className=\"text-[14rem] md:text-[28rem] font-[800]\">7.000.000 VND</b>",
-    "award_item_3_value": "Trị giá <b className=\"text-[14rem] md:text-[28rem] font-[800]\">5.000.000 VND</b>",
-    "award_item_4_value": "Trị giá <b className=\"text-[14rem] md:text-[28rem] font-[800]\">3.000.000 VND</b>",
-    "award_item_5_value": "Trị giá <b className=\"text-[14rem] md:text-[28rem] font-[800]\">2.000.000 VND</b>",
-    "award_item_bonus": "Kỷ niệm chương và Huy chương",
-    "journey_section_heading": "Hành trình",
-    "contact_section_heading": "Thông tin liên hệ",
-    "contact_email": "Email BTC: {{email}}"
+    }
   }
 }
