Fix gs settings doctype

--- a/frontend/src/core/locales/resources/en.json
+++ b/frontend/src/core/locales/resources/en.json
@@ -225,128 +225,130 @@
     }
   },
   "greatest_show_25": {
-  "nav_item_1": "Overview",
-  "nav_item_2": "Awards",
-  "nav_item_3": "Journey",
-  "nav_item_4": "FAQ",
-  "nav_item_5": "Contact",
-  "form_heading": "Wisers' <br className=\"block md:hidden\"/> Greatest Show 2025",
-  "form_description_1": "Welcome WISers to",
-  "form_description_2": "Please register for the competition using the form below.",
-
-  "count_down_date": "Remaining <span className=\"text-[14rem] md:text-[40rem] font-semibold\">{{day}}</span> days <span className=\"text-[14rem] md:text-[40rem] font-semibold\">{{hours}}</span> hours <span className=\"text-[14rem] md:text-[40rem] font-semibold\">{{minutes}}</span> minutes <span className=\"text-[14rem] md:text-[40rem] font-semibold\">{{seconds}}</span> seconds",
-  "teaser_heading_1": "Happy",
-  "teaser_heading_2": "Run",
-  "teaser_description": "STAY TUNED FOR THE HAPPY RUN 2025 TEASER <br/> ON SUNDAY, MARCH 23, 2025",
-  "target_heading": "Contestants",
-  "target_group_title_1": "Students",
-  "target_group_desc_1": "Students from grade 1-12 currently studying at Wellspring Saigon (2025-2026 school year)",
-  "target_group_title_2": "Alumni",
-  "target_group_desc_2": "Alumni learnt at Wellspring Saigon",
-  "target_group_title_3": "Teachers & Staff",
-  "target_group_desc_3": "All Teachers and Staff currently working at Wellspring Saigon",
-  "target_group_title_4": "Parents",
-  "target_group_desc_4": "Parents of children studying at Wellspring Saigon (2025-2026 school year)",
-  "target_text_1": "Contestants will be divided into <b>3 COMPETITION GROUPS</b> based on participant groups",
-  "category_heading": "Type of Performance",
-  "category_item_1": "Singing",
-  "category_item_2": "Dancing",
-  "category_item_3": "Musical Instrument Performance",
-  "category_item_4": "Other Talents",
-  "awards_heading": "Awards",
-  "awards_value_title": "Total prize value up to",
-  "award_item_1_value": "Worth <b className=\"text-[14rem] md:text-[28rem] font-[800]\">10,000,000 VND</b>",
-  "award_item_2_value": "Worth <b className=\"text-[14rem] md:text-[28rem] font-[800]\">7,000,000 VND</b>",
-  "award_item_3_value": "Worth <b className=\"text-[14rem] md:text-[28rem] font-[800]\">5,000,000 VND</b>",
-  "award_item_4_value": "Worth <b className=\"text-[14rem] md:text-[28rem] font-[800]\">3,000,000 VND</b>",
-  "award_item_5_value": "Worth <b className=\"text-[14rem] md:text-[28rem] font-[800]\">2,000,000 VND</b>",
-  "award_item_bonus": "Souvenirs and Medals",
-  "journey_section_heading": "Journey",
-  "contact_section_heading": "Contact Information",
-  "contact_email": "Organizer's Email: {{email}}",
-  "form": {
-    "section_info_heading": "General Information",
-    "section_1_heading": "Participant Category",
-    "section_2_heading": "Performance Information",
-    "section_3_heading": "FOR PARENTS / ACCOMPANYING ADULTS",
-    "section_4_heading": "CONTACT INFORMATION",
-    "section_4_desc_1": "Important information for organizers to contact and send registration confirmation to participants. <br/> If the participant is a Primary student, please provide the contact of a Parent or accompanying adult.",
-    "section_4_desc_2": "*If the participant is a Primary student, please provide the contact information of a Parent or accompanying adult.",
-    "pharse_1_heading": "Register <br/> Your Performance",
-    "pharse_1_desc": "From 03/11/2025 to <br/> 5:00 PM, 21/11/2025",
-    "pharse_2_heading": "ROUND 1: <br/> WITHIN ME",
-    "pharse_2_desc": "29/11/2025",
-    "pharse_3_heading": "ROUND 2: <br/> WHERE AM I?",
-    "pharse_3_desc": "10/01/2026",
-    "pharse_4_heading": "ROUND 3: <br/> WGS CONCERT NIGHT <br/> & AWARD CEREMONY <br/> HERE I AM",
-    "pharse_4_desc": "10/01/2026",
-    "group_label": "Participant Category",
-    "group_items": {
-      "primary_students": "Primary Students",
-      "primary_students_heading": "Group A",
-      "primary_students_description": "Primary Students: <br/> Grades 1–5",
-      "secondary_students": "Secondary Students",
-      "secondary_students_heading": "Group B",
-      "secondary_students_description": "Secondary Students: <br/> Grades 6–12",
-      "parent_teacher_staff": "Parents – Teachers – Staff",
-      "parent_teacher_staff_heading": "Group C",
-      "parent_teacher_staff_description": "<ul className=\"pl-[15rem] md:pl-[40rem]\" style=\"list-style: disc; text-align:left\"><li>Parents</li><li>Parents & Students</li><li>Teachers – Staff <br/> of Wellspring Saigon</li><li>Alumni</li></ul>"
+    "nav_item_1": "Overview",
+    "nav_item_2": "Awards",
+    "nav_item_3": "Journey",
+    "nav_item_4": "FAQ",
+    "nav_item_5": "Contact",
+    "form_heading": "Wisers' <br className=\"block md:hidden\"/> Greatest Show 2025",
+    "form_description_1": "Welcome WISers to",
+    "form_description_2": "Please register for the competition using the form below.",
+    "count_down_text_prefix": "Only",
+    "count_down_text_days": "Days",
+    "count_down_text_hours": "Hours",
+    "count_down_text_minutes": "Minutes",
+    "count_down_text_seconds": "Seconds",
+    "teaser_heading_1": "Happy",
+    "teaser_heading_2": "Run",
+    "teaser_description": "STAY TUNED FOR THE HAPPY RUN 2025 TEASER <br/> ON SUNDAY, MARCH 23, 2025",
+    "target_heading": "Contestants",
+    "target_group_title_1": "Students",
+    "target_group_desc_1": "Students from grade 1-12 currently studying at Wellspring Saigon (2025-2026 school year)",
+    "target_group_title_2": "Alumni",
+    "target_group_desc_2": "Alumni learnt at Wellspring Saigon",
+    "target_group_title_3": "Teachers & Staff",
+    "target_group_desc_3": "All Teachers and Staff currently working at Wellspring Saigon",
+    "target_group_title_4": "Parents",
+    "target_group_desc_4": "Parents of children studying at Wellspring Saigon (2025-2026 school year)",
+    "target_text_1": "Contestants will be divided into <b>3 COMPETITION GROUPS</b> based on participant groups",
+    "category_heading": "Type of Performance",
+    "category_item_1": "Singing",
+    "category_item_2": "Dancing",
+    "category_item_3": "Musical Instrument Performance",
+    "category_item_4": "Other Talents",
+    "awards_heading": "Awards",
+    "awards_value_title": "Total prize value up to",
+    "award_item_1_value": "Worth <b className=\"text-[14rem] md:text-[28rem] font-[800]\">10,000,000 VND</b>",
+    "award_item_2_value": "Worth <b className=\"text-[14rem] md:text-[28rem] font-[800]\">7,000,000 VND</b>",
+    "award_item_3_value": "Worth <b className=\"text-[14rem] md:text-[28rem] font-[800]\">5,000,000 VND</b>",
+    "award_item_4_value": "Worth <b className=\"text-[14rem] md:text-[28rem] font-[800]\">3,000,000 VND</b>",
+    "award_item_5_value": "Worth <b className=\"text-[14rem] md:text-[28rem] font-[800]\">2,000,000 VND</b>",
+    "award_item_bonus": "Souvenirs and Medals",
+    "journey_section_heading": "Journey",
+    "contact_section_heading": "Contact Information",
+    "contact_email": "Organizer's Email: {{email}}",
+    "form": {
+      "section_info_heading": "General Information",
+      "section_1_heading": "Participant Category",
+      "section_2_heading": "Performance Information",
+      "section_3_heading": "FOR PARENTS / ACCOMPANYING ADULTS",
+      "section_4_heading": "CONTACT INFORMATION",
+      "section_4_desc_1": "Important information for organizers to contact and send registration confirmation to participants. <br/> If the participant is a Primary student, please provide the contact of a Parent or accompanying adult.",
+      "section_4_desc_2": "*If the participant is a Primary student, please provide the contact information of a Parent or accompanying adult.",
+      "pharse_1_heading": "Register <br/> Your Performance",
+      "pharse_1_desc": "From 03/11/2025 to <br/> 5:00 PM, 21/11/2025",
+      "pharse_2_heading": "ROUND 1: <br/> WITHIN ME",
+      "pharse_2_desc": "29/11/2025",
+      "pharse_3_heading": "ROUND 2: <br/> WHERE AM I?",
+      "pharse_3_desc": "10/01/2026",
+      "pharse_4_heading": "ROUND 3: <br/> WGS CONCERT NIGHT <br/> & AWARD CEREMONY <br/> HERE I AM",
+      "pharse_4_desc": "10/01/2026",
+      "group_label": "Participant Category",
+      "group_items": {
+        "primary_students": "Primary Students",
+        "primary_students_heading": "Group A",
+        "primary_students_description": "Primary Students: <br/> Grades 1–5",
+        "secondary_students": "Secondary Students",
+        "secondary_students_heading": "Group B",
+        "secondary_students_description": "Secondary Students: <br/> Grades 6–12",
+        "parent_teacher_staff": "Parents – Teachers – Staff",
+        "parent_teacher_staff_heading": "Group C",
+        "parent_teacher_staff_description": "<ul className=\"pl-[15rem] md:pl-[40rem]\" style=\"list-style: disc; text-align:left\"><li>Parents</li><li>Parents & Students</li><li>Teachers – Staff <br/> of Wellspring Saigon</li><li>Alumni</li></ul>"
+      },
+      "group_required": "Please select a participant category",
+      "entry_name": "Performance Title",
+      "entry_name_required": "Please enter the performance title",
+      "entry_category_label": "Competition Category",
+      "entry_category_required": "Please select a competition category",
+      "entry_categories": {
+        "singing": "Singing",
+        "dancing": "Dancing",
+        "instrument": "Musical Instrument Performance",
+        "instrument_placeholder": "Please specify your instrument",
+        "talent": "Other Talents",
+        "talent_placeholder": "Please provide additional information"
+      },
+      "instrument_info_required": "Please enter your instrument",
+      "entry_talent_required": "Please provide performance details",
+      "entry_participants_label": "Participant Information",
+      "entry_participants_required": "Please enter participant information",
+      "entry_participants_placeholder": "Full name (required); class, department (if any). Example: Nguyen Van A – Class 8.8 \nIf registering as a group, please include all members’ names.",
+      "entry_file_label": "Upload music/video file (Maximum 100MB)",
+      "entry_file_button": "Upload file",
+      "entry_file_invalid": "Please upload a valid file (mp3, mp4, mov, wmv, avi)",
+      "entry_file_too_large": "File size exceeds 100MB",
+      "full_name": "Full Name",
+      "full_name_placeholder": "Enter full name",
+      "full_name_required": "Please enter your full name",
+      "mobile_number": "Phone Number",
+      "mobile_number_desc": "*Note: Phone number of parent or accompanying adult",
+      "mobile_number_placeholder": "Enter phone number",
+      "mobile_number_required": "Please enter your phone number",
+      "email": "Email",
+      "email_desc": "*Note: one parent’s email address",
+      "email_placeholder": "Enter email",
+      "email_required": "Please enter your email",
+      "email_invalid": "Invalid email address",
+      "footer_heading": "Notes for Round 1",
+      "footer_note_1": "1. Contestants registering for Round 1 must complete the <b>registration form before 5:00 PM on 21/11/2025</b>.",
+      "footer_note_2": "2. The performance schedule for each act will be updated on the event website on 24/11/2025.",
+      "footer_note_3": "3. Contestants must arrive 15 minutes before the performance time for attendance and preparation.",
+      "footer_note_4": "4. Round 1 performances should not exceed 3 minutes and must showcase skills, talent, and the main content of the work.",
+      "success_text_1": "Thank you for registering for WISer's Greatest Show. Detailed registration information will be sent to your registered email.",
+      "success_text_2": "See you at <b>ROUND 1 – WITHIN ME</b> on <b>29/11/2025.</b>",
+      "success_text_3": "Get ready to show your talent and passion at <br/> WISers' Greatest Show 2025!"
     },
-    "group_required": "Please select a participant category",
-    "entry_name": "Performance Title",
-    "entry_name_required": "Please enter the performance title",
-    "entry_category_label": "Competition Category",
-    "entry_category_required": "Please select a competition category",
-    "entry_categories": {
-      "singing": "Singing",
-      "dancing": "Dancing",
-      "instrument": "Musical Instrument Performance",
-      "instrument_placeholder": "Please specify your instrument",
-      "talent": "Other Talents",
-      "talent_placeholder": "Please provide additional information"
-    },
-    "instrument_info_required": "Please enter your instrument",
-    "entry_talent_required": "Please provide performance details",
-    "entry_participants_label": "Participant Information",
-    "entry_participants_required": "Please enter participant information",
-    "entry_participants_placeholder": "Full name (required); class, department (if any). Example: Nguyen Van A – Class 8.8 \nIf registering as a group, please include all members’ names.",
-    "entry_file_label": "Upload music/video file (Maximum 100MB)",
-    "entry_file_button": "Upload file",
-    "entry_file_invalid": "Please upload a valid file (mp3, mp4, mov, wmv, avi)",
-    "entry_file_too_large": "File size exceeds 100MB",
-    "full_name": "Full Name",
-    "full_name_placeholder": "Enter full name",
-    "full_name_required": "Please enter your full name",
-    "mobile_number": "Phone Number",
-    "mobile_number_desc": "*Note: Phone number of parent or accompanying adult",
-    "mobile_number_placeholder": "Enter phone number",
-    "mobile_number_required": "Please enter your phone number",
-    "email": "Email",
-    "email_desc": "*Note: one parent’s email address",
-    "email_placeholder": "Enter email",
-    "email_required": "Please enter your email",
-    "email_invalid": "Invalid email address",
-    "footer_heading": "Notes for Round 1",
-    "footer_note_1": "1. Contestants registering for Round 1 must complete the <b>registration form before 5:00 PM on 21/11/2025</b>.",
-    "footer_note_2": "2. The performance schedule for each act will be updated on the event website on 24/11/2025.",
-    "footer_note_3": "3. Contestants must arrive 15 minutes before the performance time for attendance and preparation.",
-    "footer_note_4": "4. Round 1 performances should not exceed 3 minutes and must showcase skills, talent, and the main content of the work.",
-    "success_text_1": "Thank you for registering for WISer's Greatest Show. Detailed registration information will be sent to your registered email.",
-    "success_text_2": "See you at <b>ROUND 1 – WITHIN ME</b> on <b>29/11/2025.</b>",
-    "success_text_3": "Get ready to show your talent and passion at <br/> WISers' Greatest Show 2025!"
-  },
-  "buttons": {
-    "register_now": "Register Now",
-    "go_back": "Go Back",
-    "finish": "Finish",
-    "view_more": "View More",
-    "view_less": "View Less",
-    "view_order": "View Order",
-    "back_to_home": "Back to Home",
-    "entry_rules": "Rules",
-    "entry_results": "Results",
-    "go_home": "Return Home"
+    "buttons": {
+      "register_now": "Register Now",
+      "go_back": "Go Back",
+      "finish": "Finish",
+      "view_more": "View More",
+      "view_less": "View Less",
+      "view_order": "View Order",
+      "back_to_home": "Back to Home",
+      "entry_rules": "Rules",
+      "entry_results": "Results",
+      "go_home": "Return Home"
+    }
   }
-}
-
 }
