--- a/frontend/src/core/locales/resources/en.json
+++ b/frontend/src/core/locales/resources/en.json
@@ -28,7 +28,8 @@
     "student_code": "Student Code",
     "event_email": "Email",
     "search_empty": "No results found, please add more",
-    "sold_out": "Sold Out"
+    "sold_out": "Sold Out",
+    "notification": "Notification"
   },
   "notification": {
     "client_error": {
@@ -148,6 +149,7 @@
     "buttons": {
       "add_person": "Add Person +",
       "register_now": "Register Now",
+      "join_now": "JOIN NOW BEFORE​",
       "confirm_payment": "Confirm Payment",
       "go_back": "Go Back",
       "download_qr": "Download QR Code",
@@ -251,7 +253,7 @@
     "target_group_desc_3": "All Teachers and Staff currently working at Wellspring Saigon",
     "target_group_title_4": "Parents",
     "target_group_desc_4": "Parents of children studying at Wellspring Saigon (2025-2026 school year)",
-    "target_text_1": "Contestants will be divided into <b>3 COMPETITION GROUPS</b> based on participant groups",
+    "target_text_1": "Contestants will be divided into <b>3 COMPETITION GROUPS:</b>",
     "category_heading": "Type of Performance",
     "category_item_1": "Singing",
     "category_item_2": "Dancing",
@@ -259,12 +261,14 @@
     "category_item_4": "Other Talents",
     "awards_heading": "Awards",
     "awards_value_title": "Total prize value up to",
-    "award_item_1_value": "Worth <b className=\"text-[14rem] md:text-[28rem] font-[800]\">10,000,000 VND</b>",
-    "award_item_2_value": "Worth <b className=\"text-[14rem] md:text-[28rem] font-[800]\">7,000,000 VND</b>",
-    "award_item_3_value": "Worth <b className=\"text-[14rem] md:text-[28rem] font-[800]\">5,000,000 VND</b>",
-    "award_item_4_value": "Worth <b className=\"text-[14rem] md:text-[28rem] font-[800]\">3,000,000 VND</b>",
-    "award_item_5_value": "Worth <b className=\"text-[14rem] md:text-[28rem] font-[800]\">2,000,000 VND</b>",
-    "award_item_bonus": "Souvenirs and Medals",
+    "award_item_1_value": "Worth <b className=\"text-[14rem] md:text-[28rem] font-[800]\">10,000,000 VND/PRIZE</b>",
+    "award_item_2_value": "Worth <b className=\"text-[14rem] md:text-[28rem] font-[800]\">7,000,000 VND/PRIZE</b>",
+    "award_item_3_value": "Worth <b className=\"text-[14rem] md:text-[28rem] font-[800]\">5,000,000 VND/PRIZE</b>",
+    "award_item_4_value": "Worth <b className=\"text-[14rem] md:text-[28rem] font-[800]\">3,000,000 VND/PRIZE</b>",
+    "award_item_5_value": "Worth <b className=\"text-[14rem] md:text-[28rem] font-[800]\">2,000,000 VND/PRIZE</b>",
+    "award_item_bonus_1": "Along with Trophy & Medal​",
+    "award_item_bonus_2": "Along with Certificate & Medal​​",
+    "award_note": "Note: The number of prizes may be adjusted based on the actual number of registrations.​​​",
     "journey_section_heading": "Journey",
     "contact_section_heading": "Contact Information",
     "contact_email": "Organizer's Email: {{email}}",
@@ -294,12 +298,12 @@
         "secondary_students_description": "Secondary Students: <br/> Grades 6–12",
         "parent_teacher_staff": "Parents – Teachers – Staff",
         "parent_teacher_staff_heading": "Group C",
-        "parent_teacher_staff_description": "<ul className=\"pl-[15rem] md:pl-[40rem]\" style=\"list-style: disc; text-align:left\"><li>Parents</li><li>Parents & Students</li><li>Teachers – Staff <br/> of Wellspring Saigon</li><li>Alumni</li></ul>"
+        "parent_teacher_staff_description": "<ul className=\"pl-[15rem] md:pl-[40rem]\" style=\"list-style: disc; text-align:left\"><li>Alumni</li><li>Parents & Students</li><li>Students & Teachers</li><li>Teachers</li><li>Staff</li><li>Parents & Teachers</li></ul>"
       },
       "group_required": "Please select a participant category",
       "entry_name": "Performance Title",
       "entry_name_required": "Please enter the performance title",
-      "entry_category_label": "Competition Category",
+      "entry_category_label": "Type of Performance",
       "entry_category_required": "Please select a competition category",
       "entry_categories": {
         "singing": "Singing",
@@ -307,13 +311,13 @@
         "instrument": "Musical Instrument Performance",
         "instrument_placeholder": "Please specify your instrument",
         "talent": "Other Talents",
-        "talent_placeholder": "Please provide additional information"
+        "talent_placeholder": "Please fill in the competition category (circus, martial arts, ...)"
       },
       "instrument_info_required": "Please enter your instrument",
       "entry_talent_required": "Please provide performance details",
-      "entry_participants_label": "Participant Information",
-      "entry_participants_required": "Please enter participant information",
-      "entry_participants_placeholder": "Full name (required); class, department (if any). Example: Nguyen Van A – Class 8.8 \nIf registering as a group, please include all members’ names.",
+      "entry_participants_label": "Members (Max 25 people)",
+      "entry_participants_required": "Please enter member information",
+      "entry_participants_placeholder": "Full name (required); class, department (if any). Example: Nguyen Van A – Class 8.8",
       "entry_file_label": "Upload music/video file (Maximum 100MB)",
       "entry_file_button": "Upload file",
       "entry_file_invalid": "Please upload a valid file (mp3, mp4, mov, wmv, avi)",
@@ -337,7 +341,9 @@
       "footer_note_4": "4. Round 1 performances should not exceed 3 minutes and must showcase skills, talent, and the main content of the work.",
       "success_text_1": "Thank you for registering for WISer's Greatest Show. Detailed registration information will be sent to your registered email.",
       "success_text_2": "See you at <b>ROUND 1 – WITHIN ME</b> on <b>29/11/2025.</b>",
-      "success_text_3": "Get ready to show your talent and passion at <br/> WISers' Greatest Show 2025!"
+      "success_text_3": "Get ready to show your talent and passion at <br/> WISers' Greatest Show 2025!",
+      "submit_note": "By clicking the “REGISTER” button, you confirm that you have read and agree to the regulations and terms of participation in the WISers’ Greatest Show 2025 competition on the event website.",
+      "submitting": "Submitting your registration. Please wait..."
     },
     "buttons": {
       "register_now": "Register Now",
@@ -348,8 +354,11 @@
       "view_order": "View Order",
       "back_to_home": "Back to Home",
       "entry_rules": "Rules",
+      "round_1_entry_list": "Round 1 Entry List",
       "entry_results": "Results",
-      "go_home": "Return Home"
+      "go_home": "Return Home",
+      "register": "Register",
+      "add_person": "Add member +"
     }
   }
 }
