Update focus group

--- a/frontend/src/core/locales/resources/vn.json
+++ b/frontend/src/core/locales/resources/vn.json
@@ -361,7 +361,7 @@
       "round_3_entry_list": "Danh sách tiết mục Vòng 3",
       "entry_results": "Kết quả thi",
       "go_home": "Trở về",
-      "register": "Register",
+      "register": "Đăng ký",
       "add_person": "Thêm thành viên +"
     },
     "program_status": {
