--- a/frontend/src/core/locales/resources/en.json
+++ b/frontend/src/core/locales/resources/en.json
@@ -267,7 +267,7 @@
     "award_item_4_value": "Worth <b className=\"text-[14rem] md:text-[28rem] font-[800]\">3,000,000 VND/PRIZE</b>",
     "award_item_5_value": "Worth <b className=\"text-[14rem] md:text-[28rem] font-[800]\">2,000,000 VND/PRIZE</b>",
     "award_item_bonus_1": "Along with Trophy & Medal​",
-    "award_item_bonus_2": "Along with Certificate & Medal​​",
+    "award_item_bonus_2": "Along with Certificate",
     "award_note": "Note: The number of prizes may be adjusted based on the actual number of registrations.​​​",
     "journey_section_heading": "Journey",
     "contact_section_heading": "Contact Information",
@@ -281,13 +281,13 @@
       "section_4_desc_1": "Important information for organizers to contact and send registration confirmation to participants. <br/> If the participant is a Primary student, please provide the contact of a Parent or accompanying adult.",
       "section_4_desc_2": "*If the participant is a Primary student, please provide the contact information of a Parent or accompanying adult.",
       "pharse_1_heading": "Register <br/> Your Performance",
-      "pharse_1_desc": "From 03/11/2025 to <br/> 5:00 PM, 21/11/2025",
+      "pharse_1_desc": "From 03/11/2025 to <br/> 5:00 PM, 23/11/2025",
       "pharse_2_heading": "ROUND 1: <br/> WITHIN ME",
       "pharse_2_desc": "29/11/2025",
       "pharse_3_heading": "ROUND 2: <br/> WHERE AM I?",
       "pharse_3_desc": "10/01/2026",
       "pharse_4_heading": "ROUND 3: <br/> WGS CONCERT NIGHT <br/> & AWARD CEREMONY <br/> HERE I AM",
-      "pharse_4_desc": "10/01/2026",
+      "pharse_4_desc": "14/03/2026",
       "group_label": "Participant Category",
       "group_items": {
         "primary_students": "Primary Students",
@@ -335,13 +335,15 @@
       "email_required": "Please enter your email",
       "email_invalid": "Invalid email address",
       "footer_heading": "Notes for Round 1",
-      "footer_note_1": "1. Contestants registering for Round 1 must complete the <b>registration form before 5:00 PM on 21/11/2025</b>.",
+      "footer_note_1": "1. Contestants registering for Round 1 must complete the <b>registration form before 5:00 PM on 23/11/2025</b>.",
       "footer_note_2": "2. The performance schedule for each act will be updated on the event website on 24/11/2025.",
       "footer_note_3": "3. Contestants must arrive 15 minutes before the performance time for attendance and preparation.",
       "footer_note_4": "4. Round 1 performances should not exceed 3 minutes and must showcase skills, talent, and the main content of the work.",
-      "success_text_1": "Thank you for registering for WISer's Greatest Show. Detailed registration information will be sent to your registered email.",
-      "success_text_2": "See you at <b>ROUND 1 – WITHIN ME</b> on <b>29/11/2025.</b>",
-      "success_text_3": "Get ready to show your talent and passion at <br/> WISers' Greatest Show 2025!",
+      "success_text_1": "Thank you for registering for WISers’ Greatest Show 2025!",
+      "success_text_2": "Your registration information has been successfully recorded and sent to your registered email address.​",
+      "success_text_3": "The Organizing Committee will review and approve your submission in the coming days.​",
+      "success_text_4": "Please stay tuned for updates via email or the school’s official communication channels.",
+      "success_text_5": "See you at <b>ROUND 1 – “WITHIN ME” on November 29, 2025</b>. ​Get ready to shine and showcase your unique talent! ​",
       "submit_note": "By clicking the “REGISTER” button, you confirm that you have read and agree to the regulations and terms of participation in the WISers’ Greatest Show 2025 competition on the event website.",
       "submitting": "Submitting your registration. Please wait..."
     },
